# docktail

./: Cargo.toml  Dockerfile  Dockerfile.alpine  Makefile  deploybot.yaml  deployment.yaml  docker-compose.yaml
etc-loki/: local-config.yaml
src/: loki.rs  main.rs
