[package]
name = "docktail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = {version = "0.11.9", features = ["json"] }
shiplift = "0.7.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.6"
stable-eyre = "0.2.2"
