[package]
name = "docktail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = {version = "0.11.9", features = ["json"] }
shiplift = {version = "0.7.0", features = ["chrono"] }
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.6"
stable-eyre = "0.2.2"
chrono = "0.4"
tracing = {version = "0.1.31", features = ["max_level_info"]}
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = "0.3.9"
log = {version = "0.4.14", features = ["max_level_info"]}
prometheus = "0.13.3"
hyper = "0.14.25"
lazy_static = "1.4.0"

[features]
