[package]
name = "docktail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
reqwest = { version = "*", features = ["json"] }
shiplift = { version = "*", features = ["chrono"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
eyre = "0.6.6"
stable-eyre = "0.2.2"
chrono = "0.4"
tracing = { version = "*", features = ["max_level_info"] }
tracing-subscriber = { version = "*", features = ["env-filter"] }
log = { version = "*", features = ["max_level_info"] }
prometheus = "0.13.3"
hyper = "0.14.25"
lazy_static = "1.4.0"
tracing-logfmt = "0.3.1"

[features]
